Adjust beaker://start grid padding so it overflows correctly

--- a/app/stylesheets/builtin-pages.less
+++ b/app/stylesheets/builtin-pages.less
@@ -416,9 +416,10 @@
   margin-bottom: 20px;
 
   &.center {
-    margin: 100px auto;
+    margin: 75px auto;
     padding: 0 50px;
     width: 100%;
+    height: auto;
     max-width: 750px;
   }
 }
