--- a/app/stylesheets/builtin-pages/start.less
+++ b/app/stylesheets/builtin-pages/start.less
@@ -69,6 +69,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 15px;
+  padding-bottom: 20px;
 
   @media (min-width: 550px) {
     grid-template-columns: 1fr 1fr 1fr;
